Fix spacing on IE Chrome Frame install message. (#291)

--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -1026,6 +1026,7 @@ body.teaching #main li {
     padding: 11px 0;
     text-align: center;
     p {
+        margin: 0;
         position: relative;
         z-index: 2;
         &.dismiss {
